bug fixes, final touches

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <nav>
         <div class="logo">
           <img src="./resources/images/ic-logo.svg" alt="logo">
-          <span>COLMAR</span><span>ACADEMY</span>
+          <span class="colmar">COLMAR</span><span>ACADEMY</span>
         </div>
 
         <div class="nav-items">
@@ -138,7 +138,7 @@
       <h1 class="thesis-title">Thesis Exhibits</h1>
       <div class="thesis">
         <div class="main-thesis">
-          <video src="./resources/videos/thesis.mp4" autoplay controls poster="posterimage.jpg">
+          <video src="./resources/videos/thesis.mp4" controls>
           </video>
           <h2>Reimagine urban</h2>
           <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
@@ -164,6 +164,10 @@
 
     <footer>
       <p>&copy; Colmar Academy. All rights reserved</p>
+      <div class="footer-links">
+        <span>Terms</span>
+        <span>Privacy</span>
+      </div>
     </footer>
   </body>
 </html>
